# data-anonymization-and-synthesis-tool

./: .dockerignore  .gitignore  Dockerfile  EXPLANATION.md  README.md  compose.yaml  pyproject.toml  requirements.txt
dockerfiles/: backend.Dockerfile  frontend.Dockerfile
docs/sprint-1/: anonymization-methods.md  api-contracts.md  architecture.md  data-model.md  schemas.md  scope.md  test-plan.md  ui-flow.md
docs/sprint-3/: scope.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/site/: index.html
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/anonymize/: page.tsx
frontend/src/app/similar/: page.tsx
frontend/src/components/: action-loader.tsx  anonymize-flow.tsx  dot-grid-background.tsx  fullscreen-loader-overlay.tsx  generate-flow.tsx  landing-page.tsx  language-provider.tsx  reveal.tsx  similar-flow.tsx  site-header.tsx  sliding-control.tsx
frontend/src/lib/: api-types.ts  api.ts  download.ts
src/sda/core/anonymization/: anonymizer.py  field_detector.py  method_suggester.py
src/sda/core/domain/: errors.py
src/sda/core/generation/: generator.py  validators.py
src/sda/io/: csv_read.py  csv_write.py
src/sda/use_cases/: analyze_columns.py  anonymize_csv.py  generate_csv.py  similar_csv.py  suggest_pii.py  suggest_rules.py  synthesize_csv.py
src/sda/web/: app.py  deps.py
tests/: test_anonymize.py  test_anonymizer.py  test_api_anonymize.py  test_api_generate.py  test_api_similar.py  test_csv_io.py  test_field_detector.py  test_generator.py  test_semantic_consistency.py  test_suggester.py  test_synthesis.py
(+13 files in other folders)
