[project]
name = "synthetic-data-anonymizer"
version = "0.1.0"
description = "A simple Web/API tool for generating synthetic tabular data and anonymizing CSV files."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "pydantic>=2.0.0",
  "pandas>=2.0.0",
  "faker>=24.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
