[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-data-anonymizer"
version = "0.1.0"
description = "A simple Web/API tool for generating synthetic tabular data and anonymizing CSV files."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "pydantic>=2.0.0",
  "faker>=24.0.0",
  "python-multipart>=0.0.9",
  "pandas>=2.3.0",
  "sdv>=1.36.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["sda*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
